--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!-- GoogleFontsの読み込み -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
   <header>
     <h1>
       <a href="./index.html" class="logo">
-        <img src="../img/ロゴ.png" alt="DESIGN COFFEEのロゴ">
+        <img src="./img/ロゴ.png" alt="DESIGN COFFEEのロゴ">
       </a>
     </h1>
     <nav>
@@ -32,7 +32,7 @@
     <h2>No Coffee, No Life.</h2>
     <p>豆の産地・焙煎からこだわり抜いたコーヒー</p>
     <a href="#about">
-      <img src="../img/down.png" alt="下へスクロール">
+      <img src="./img/down.png" alt="下へスクロール">
     </a>
    </section>
    <main>
@@ -46,7 +46,7 @@
         </div>
         <div class="layout">
           <div class="image">
-            <img src="../img/about-photo.png" alt="当店の写真">
+            <img src="./img/about-photo.png" alt="当店の写真">
           </div>
           <div class="text">
             <img src="../img/ロゴ.png" alt="DESIGN COFFEEのロゴ">
